skeplib/tests/fixtures/sema/invalid/vec_untyped_new.sk
import vec;

fn main() -> Int {
  let xs = vec.new();
  return 0;
}
